--- a/coursework/coursework/MainWindow.xaml
+++ b/coursework/coursework/MainWindow.xaml
@@ -10,11 +10,9 @@
         <Grid.Background>
             <ImageBrush ImageSource="/1616522875_16-p-ochen-krasivii-fon-18.jpg"/>
         </Grid.Background>
-        <Button Content="PassingInfo" Margin="40,329,590,50" BorderBrush="#FF8E2020" Background="#FFAF9A37" Click="Button_Click_4" FontSize="20" FontFamily="Times New Roman" FontStyle="Italic" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Foreground="White" />
-        <Button Content="LivingInfo" Margin="40,189,590,190" Background="#FF5A56EC" Click="Button_Click_2" FontSize="20" FontFamily="Times New Roman" FontStyle="Italic" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Foreground="White"/>
-        <Button Content="RewardInfo" Margin="40,119,590,260" Background="#FF423EE4" Click="Button_Click_1" FontSize="20" FontFamily="Times New Roman" FontStyle="Italic" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Foreground="White"/>
-        <Button Content="PersonalInfo" Margin="40,39,590,340" Background="#FF162FB9" Click="Button_Click" FontSize="20" FontFamily="Times New Roman" FontStyle="Italic" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Foreground="White"/>
-        <Frame x:Name="Main" Margin="245,10,10,0"/>
-        <Button Content="ScheduleInfo" Margin="40,259,590,120" Background="#FF379CAF" Click="Button_Click_3" FontSize="20" FontFamily="Times New Roman" FontStyle="Italic" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Foreground="White"/>
+        <Button Content="PassingInfo" Margin="40,289,590,90" BorderBrush="#FF8E2020" Background="#FFAF9A37" Click="Button_Click_4" FontSize="20" FontFamily="Times New Roman" FontStyle="Italic" HorizontalContentAlignment="Center" Foreground="White" />
+        <Button Content="ScheduleInfo" Margin="40,204,590,175" Background="#FF5A56EC" Click="Button_Click_2" FontSize="20" FontFamily="Times New Roman" FontStyle="Italic" HorizontalContentAlignment="Center" Foreground="White"/>
+        <Button Content="SortApplicants" Margin="40,109,590,270" Background="#FF162FB9" Click="Button_Click" FontSize="20" FontFamily="Times New Roman" FontStyle="Italic" HorizontalContentAlignment="Center" Foreground="White"/>
+        <Frame x:Name="Main" Margin="245,10,10,0" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
