--- a/coursework/coursework/Page4.xaml
+++ b/coursework/coursework/Page4.xaml
@@ -5,10 +5,11 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:coursework"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="545"
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="Page4">
 
-    <Grid Margin="420,0,0,0">
-        <DataGrid x:Name="dt1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="-420,-5,5,0"/>
+    <Grid>
+        <TextBlock Text="Page4" HorizontalAlignment="Left" VerticalAlignment="Top" Height="300" Width="400" FontSize="32" TextAlignment="Center" Margin="50,0,0,0"/>
+        <DataGrid x:Name="dt" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="340,-5,5,0"/>
     </Grid>
 </Page>
