--- a/coursework/coursework/Page5.xaml
+++ b/coursework/coursework/Page5.xaml
@@ -8,15 +8,16 @@
       d:DesignHeight="450" d:DesignWidth="545"
       Title="Page5">
 
-    <Grid Margin="325,30,0,0">
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="25*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="0*"/>
-            <RowDefinition Height="56*"/>
-        </Grid.RowDefinitions>
-        <ComboBox x:Name="CB" HorizontalAlignment="Left" Height="65" Margin="-324,177,0,0" VerticalAlignment="Top" Width="545" SelectionChanged="ComboBox_SelectionChanged" Grid.Row="4" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+    <Grid Margin="-70,30,0,0" RenderTransformOrigin="0.488,0.607">
+
+
+        <ComboBox x:Name="CB" HorizontalAlignment="Left" Height="50" Margin="75,325,0,0" VerticalAlignment="Top" Width="175" SelectionChanged="ComboBox_SelectionChanged" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+            <ComboBox.Background>
+                <LinearGradientBrush EndPoint="0,1">
+                    <GradientStop Color="#FFF0F0F0"/>
+                    <GradientStop Color="#FFEDF9A5" Offset="1"/>
+                </LinearGradientBrush>
+            </ComboBox.Background>
             <ComboBoxItem Content="Все" />
             <ComboBoxItem Content="Фізика" />
             <ComboBoxItem Content="Хімія"/>
@@ -31,6 +32,8 @@
             <ComboBoxItem Content="Географія"/>
             <ComboBoxItem Content="Біологія"/>
         </ComboBox>
-        <DataGrid x:Name="dt1" d:ItemsSource="{d:SampleData ItemCount=5}" Height="305" Margin="-325,-5,-5,0" VerticalAlignment="Top" Grid.RowSpan="5"/>
+        <DataGrid x:Name="dt1" d:ItemsSource="{d:SampleData ItemCount=5}" Height="315" Margin="75,10,0,0" VerticalAlignment="Top"/>
+        <Button Content="Calculate" HorizontalAlignment="Left" Margin="250,325,0,0" VerticalAlignment="Top" Height="50" Width="135" Click="Calculus_Click" Background="#FFF9F9C8" FontSize="20" FontStyle="Italic" FontWeight="Normal" BorderBrush="#FFC19191" Foreground="#FFA693DC" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" RenderTransformOrigin="0.444,2.1"/>
+        <Button Content="ExtraPoints" HorizontalAlignment="Left" Margin="385,325,0,0" VerticalAlignment="Top" Height="50" Width="230" Click="Button_Click" FontSize="20" FontStyle="Italic" Background="#FFEDF9A5"/>
     </Grid>
 </Page>
